--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
-*{
-    Box-sizing: border-box;
-    Margin: 0;
-    Padding: 0;
-    }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .page-title {
-    margin: 0;
+  margin: 0;
 }
 
 #search {
-    width: 70%;
+  width: 70%;
 }
