--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,12 @@
 #search {
   width: 70%;
 }
+
+.card-title {
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.input-field {
+  width: 75%;
+}
